--- a/project/index.html
+++ b/project/index.html
@@ -14,35 +14,84 @@
     <div class="nav">
         <div class="container">
             <ul>
-                <li><a href="#appWebsite">Applications website</a></li>
-                <li><a href="#appMusic">Music application</a></li>
-                <li><a href="#appPassword">Password application</a></li>
-                <li><a href="#appPorfolio">Portfolio application</a></li>
-                <li><a href="#appQuiz">Quiz application</a></li>
-                <li><a href="#appSurvey">Survey application</a></li>
+                <a href="#appWebsite">
+                    <li>Applications website</li>
+                </a>
+                <a href="#appMusic">
+                    <li>Music application</li>
+                </a>
+                <a href="#appPassword">
+                    <li>Password application</li>
+                </a>
+                <a href="#appPorfolio">
+                    <li>Portfolio application</li>
+                </a>
+                <a href="#appQuiz">
+                    <li>Quiz application</li>
+                </a>
+                <a href="#appSurvey">
+                    <li>Survey application</li>
+                </a>
             </ul>
         </div>
     </div>
 
-    <div class="navPlaceHolder"></div>
+    <!-- <div class="navPlaceHolder"></div> -->
     <!-- a website description, that says what he does and other things -->
     <section id="appWebsite">
-        <h1>Welcome to this website</h1>
+        <div class="welcome">
+            <h1>Welcome to this website</h1>
+            <p>This is a project between two friends.</p>
+            <p>Expect some bug.</p>
+        </div>
+
+        <div class="welcome">
+            <p>Link to applications:</p>
+            <div class="welcome_container">
+                <ul>
+                    <a href="">
+                        <li>Music</li>
+                    </a>
+                    <a href="">
+                        <li>Password</li>
+                    </a>
+                    <a href="">
+                        <li>Portfolio</li>
+                    </a>
+                    <a href="">
+                        <li>Quiz</li>
+                    </a>
+                    <a href="">
+                        <li>Survey</li>
+                    </a>
+                </ul>
+            </div>
+        </div>
     </section>
     <section id="appMusic">
-        <a href="./musicPlayer/index.html">Music player application</a>
+        <div class="appDesc">
+            <a class="appLaunch" href="./musicPlayer/index.html">Music player application</a>
+        </div>
     </section>
     <section id="appPassword">
-        <a href="./password/index.html">Password manager application</a>
+        <div class="appDesc">
+            <a class="appLaunch" href="./password/index.html">Password manager application</a>
+        </div>
     </section>
     <section id="appPorfolio">
-        <a href="./portfolio/index.html">Portfolio application</a>
+        <div class="appDesc">
+            <a class="appLaunch" href="./portfolio/index.html">Portfolio application</a>
+        </div>
     </section>
     <section id="appQuiz">
-        <a href="./quiz/index.html">Quiz application</a>
+        <div class="appDesc">
+            <a class="appLaunch" href="./quiz/index.html">Quiz application</a>
+        </div>
     </section>
     <section id="appSurvey">
-        <a href="./survey/index.html">Survey application</a>
+        <div class="appDesc">
+            <a class="appLaunch" href="./survey/index.html">Survey application</a>
+        </div>
     </section>
     <!-- a link to each app and what they do and their purpose -->
 </body>
