--- a/project/quiz/index.html
+++ b/project/quiz/index.html
@@ -5,12 +5,35 @@
 <head>
     <title>Applications Website: Quiz</title> 
     <meta charset="utf-8"> 
-    <link type="stylesheet" src="./style.css">
+    <link rel="stylesheet" href="./style.css">
     <script src="./script.js" type="text/javascript"></script>
 </head>
 
 <body>
-    
+    <div class="nav">
+        <div class="container">
+            <ul>
+                <a href="../">
+                    <li>Applications website</li>
+                </a>
+                <a href="../musicPlayer/">
+                    <li>Music application</li>
+                </a>
+                <a href="../password/">
+                    <li>Password application</li>
+                </a>
+                <a href="../portfolio/">
+                    <li>Portfolio application</li>
+                </a>
+                <a href="../quiz/">
+                    <li>Quiz application</li>
+                </a>
+                <a href="../survey/">
+                    <li>Survey application</li>
+                </a>
+            </ul>
+        </div>
+    </div>
 </body>
 
 <footer>
