added image to links

--- a/project/index.html
+++ b/project/index.html
@@ -70,27 +70,42 @@
     </section>
     <section id="appMusic">
         <div class="appDesc">
-            <a class="appLaunch" href="./musicPlayer/index.html">Music player application</a>
+            <a class="appLaunch" href="./musicPlayer/index.html">
+                <span id="musicIcon" class="appIcon"></span>
+                <p class="appName">Music player application</p>
+            </a>
         </div>
     </section>
     <section id="appPassword">
         <div class="appDesc">
-            <a class="appLaunch" href="./password/index.html">Password manager application</a>
+            <a class="appLaunch" href="./password/index.html">
+                <span id="passwordIcon" class="appIcon"></span>
+                <p class="appName">Password manager application</p>
+            </a>
         </div>
     </section>
     <section id="appPorfolio">
         <div class="appDesc">
-            <a class="appLaunch" href="./portfolio/index.html">Portfolio application</a>
+            <a class="appLaunch" href="./portfolio/index.html">
+                <span id="portfolioIcon" class="appIcon"></span>
+                <p class="appName">Portfolio application</p>
+            </a>
         </div>
     </section>
     <section id="appQuiz">
         <div class="appDesc">
-            <a class="appLaunch" href="./quiz/index.html">Quiz application</a>
+            <a class="appLaunch" href="./quiz/index.html">
+                <span id="quizIcon" class="appIcon"></span>
+                <p class="appName">Quiz application</p>
+            </a>
         </div>
     </section>
     <section id="appSurvey">
         <div class="appDesc">
-            <a class="appLaunch" href="./survey/index.html">Survey application</a>
+            <a class="appLaunch" href="./survey/index.html">
+                <span id="surveyIcon" class="appIcon"></span>
+                <p class="appName">Survey application</p>
+            </a>
         </div>
     </section>
     <!-- a link to each app and what they do and their purpose -->
