--- a/project/password/index.html
+++ b/project/password/index.html
@@ -34,6 +34,11 @@
             </ul>
         </div>
     </div>
+    <div class="navPlaceHolder"></div>
+
+    <div id="container">
+        <!-- all data will be put here -->
+    </div>
 </body>
 
 <footer>
