--- a/project/index.html
+++ b/project/index.html
@@ -71,7 +71,7 @@
     <section id="appMusic">
         <div class="appDesc">
             <a class="appLaunch" href="./musicPlayer/index.html">
-                <span id="musicIcon" class="appIcon"></span>
+                <span id="musicIcon" class="appIcon" loading="lazy"></span>
                 <p class="appName">Music player application</p>
             </a>
         </div>
@@ -79,7 +79,7 @@
     <section id="appPassword">
         <div class="appDesc">
             <a class="appLaunch" href="./password/index.html">
-                <span id="passwordIcon" class="appIcon"></span>
+                <span id="passwordIcon" class="appIcon" loading="lazy"></span>
                 <p class="appName">Password manager application</p>
             </a>
         </div>
@@ -87,7 +87,7 @@
     <section id="appPorfolio">
         <div class="appDesc">
             <a class="appLaunch" href="./portfolio/index.html">
-                <span id="portfolioIcon" class="appIcon"></span>
+                <span id="portfolioIcon" class="appIcon" loading="lazy"></span>
                 <p class="appName">Portfolio application</p>
             </a>
         </div>
@@ -95,7 +95,7 @@
     <section id="appQuiz">
         <div class="appDesc">
             <a class="appLaunch" href="./quiz/index.html">
-                <span id="quizIcon" class="appIcon"></span>
+                <span id="quizIcon" class="appIcon" loading="lazy"></span>
                 <p class="appName">Quiz application</p>
             </a>
         </div>
@@ -103,7 +103,7 @@
     <section id="appSurvey">
         <div class="appDesc">
             <a class="appLaunch" href="./survey/index.html">
-                <span id="surveyIcon" class="appIcon"></span>
+                <span id="surveyIcon" class="appIcon" loading="lazy"></span>
                 <p class="appName">Survey application</p>
             </a>
         </div>
