update button styles

--- a/project/index.html
+++ b/project/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <ul>
                 <a href="#appWebsite">
-                    <li>Applications website</li>
+                    <li class="active">Applications website</li>
                 </a>
                 <a href="#appMusic">
                     <li>Music application</li>
@@ -49,19 +49,19 @@
             <p>Link to applications:</p>
             <div class="welcome_container">
                 <ul>
-                    <a href="">
+                    <a href="./musicPlayer/index.html">
                         <li>Music</li>
                     </a>
-                    <a href="">
+                    <a href="./password/index.html">
                         <li>Password</li>
                     </a>
-                    <a href="">
+                    <a href="./portfolio/index.html">
                         <li>Portfolio</li>
                     </a>
-                    <a href="">
+                    <a href="./quiz/index.html">
                         <li>Quiz</li>
                     </a>
-                    <a href="">
+                    <a href="./survey/index.html">
                         <li>Survey</li>
                     </a>
                 </ul>
@@ -70,7 +70,7 @@
     </section>
     <section id="appMusic">
         <div class="appDesc">
-            <a class="appLaunch" href="./musicPlayer/index.html">
+            <a class="appLaunch launchDark" href="./musicPlayer/index.html">
                 <span id="musicIcon" class="appIcon" loading="lazy"></span>
                 <p class="appName">Music player application</p>
             </a>
@@ -78,7 +78,7 @@
     </section>
     <section id="appPassword">
         <div class="appDesc">
-            <a class="appLaunch" href="./password/index.html">
+            <a class="appLaunch launchLight" href="./password/index.html">
                 <span id="passwordIcon" class="appIcon" loading="lazy"></span>
                 <p class="appName">Password manager application</p>
             </a>
@@ -86,7 +86,7 @@
     </section>
     <section id="appPorfolio">
         <div class="appDesc">
-            <a class="appLaunch" href="./portfolio/index.html">
+            <a class="appLaunch launchDark" href="./portfolio/index.html">
                 <span id="portfolioIcon" class="appIcon" loading="lazy"></span>
                 <p class="appName">Portfolio application</p>
             </a>
@@ -94,7 +94,7 @@
     </section>
     <section id="appQuiz">
         <div class="appDesc">
-            <a class="appLaunch" href="./quiz/index.html">
+            <a class="appLaunch launchLight" href="./quiz/index.html">
                 <span id="quizIcon" class="appIcon" loading="lazy"></span>
                 <p class="appName">Quiz application</p>
             </a>
@@ -102,7 +102,7 @@
     </section>
     <section id="appSurvey">
         <div class="appDesc">
-            <a class="appLaunch" href="./survey/index.html">
+            <a class="appLaunch launchDark" href="./survey/index.html">
                 <span id="surveyIcon" class="appIcon" loading="lazy"></span>
                 <p class="appName">Survey application</p>
             </a>
