--- a/project/musicPlayer/index.html
+++ b/project/musicPlayer/index.html
@@ -5,6 +5,7 @@
 <head>
     <title>Applications Website: Music Player</title> 
     <meta charset="utf-8"> 
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" type="text/javascript"></script>
 </head>
@@ -17,7 +18,7 @@
                     <li>Applications website</li>
                 </a>
                 <a href="../musicPlayer/">
-                    <li>Music application</li>
+                    <li class="active">Music application</li>
                 </a>
                 <a href="../password/">
                     <li>Password application</li>
