--- a/project/password/index.html
+++ b/project/password/index.html
@@ -6,6 +6,7 @@
     <title>Applications Website: Password</title> 
     <meta charset="utf-8"> 
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../style.css">
     <script src="./script.js" type="text/javascript"></script>
 </head>
 
@@ -20,7 +21,7 @@
                     <li>Music application</li>
                 </a>
                 <a href="../password/">
-                    <li>Password application</li>
+                    <li class="active">Password application</li>
                 </a>
                 <a href="../portfolio/">
                     <li>Portfolio application</li>
