--- a/project/portfolio/index.html
+++ b/project/portfolio/index.html
@@ -6,6 +6,7 @@
     <title>Applications Website: Portfolio</title> 
     <meta charset="utf-8"> 
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../style.css">
     <script src="./script.js" type="text/javascript"></script>
 </head>
 
@@ -23,7 +24,7 @@
                     <li>Password application</li>
                 </a>
                 <a href="../portfolio/">
-                    <li>Portfolio application</li>
+                    <li class="active">Portfolio application</li>
                 </a>
                 <a href="../quiz/">
                     <li>Quiz application</li>
