--- a/project/quiz/index.html
+++ b/project/quiz/index.html
@@ -6,6 +6,7 @@
     <title>Applications Website: Quiz</title> 
     <meta charset="utf-8"> 
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../style.css">
     <script src="./script.js" type="text/javascript"></script>
 </head>
 
@@ -26,7 +27,7 @@
                     <li>Portfolio application</li>
                 </a>
                 <a href="../quiz/">
-                    <li>Quiz application</li>
+                    <li class="active">Quiz application</li>
                 </a>
                 <a href="../survey/">
                     <li>Survey application</li>
