--- a/project/survey/index.html
+++ b/project/survey/index.html
@@ -6,6 +6,7 @@
     <title>Applications Website: Survey</title> 
     <meta charset="utf-8"> 
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../style.css">
     <script src="./script.js" type="text/javascript"></script>
 </head>
 
@@ -29,7 +30,7 @@
                     <li>Quiz application</li>
                 </a>
                 <a href="../survey/">
-                    <li>Survey application</li>
+                    <li class="active">Survey application</li>
                 </a>
             </ul>
         </div>
