added global style
so we don't need to reapeat those element in each app style

--- a/project/index.html
+++ b/project/index.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="welcome">
-            <p>Link to applications:</p>
+            <p>Link to applications description:</p>
             <div class="welcome_container">
                 <ul>
                     <a href="./musicPlayer/index.html">
