--- a/project/index.html
+++ b/project/index.html
@@ -5,6 +5,7 @@
 <head>
     <title>Applications Website</title>
     <meta charset="utf-8">
+    <link rel="icon" href="../images/glyph.png" type="image/png">
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" type="text/javascript"></script>
 </head>
