--- a/project/quiz/index.html
+++ b/project/quiz/index.html
@@ -3,8 +3,9 @@
 <html lang="en">
 
 <head>
-    <title>Applications Website: Quiz</title> 
-    <meta charset="utf-8"> 
+    <title>Applications Website: Quiz</title>
+    <meta charset="utf-8">
+    <link rel="icon" href="../../images/glyph.png" type="image/png">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../app-style-common.css">
