removed app flood

--- a/project/index.html
+++ b/project/index.html
@@ -19,19 +19,19 @@
                     <li class="active">Applications website</li>
                 </a>
                 <a href="#appMusic">
-                    <li>Music application</li>
+                    <li>Music</li>
                 </a>
                 <a href="#appPassword">
-                    <li>Password application</li>
+                    <li>Password</li>
                 </a>
                 <a href="#appPorfolio">
-                    <li>Portfolio application</li>
+                    <li>Portfolio</li>
                 </a>
                 <a href="#appQuiz">
-                    <li>Quiz application</li>
+                    <li>Quiz</li>
                 </a>
                 <a href="#appSurvey">
-                    <li>Survey application</li>
+                    <li>Survey</li>
                 </a>
             </ul>
         </div>
@@ -47,7 +47,7 @@
         </div>
 
         <div class="welcome">
-            <p>Link to applications description:</p>
+            <p>Link tos description:</p>
             <div class="welcome_container">
                 <ul>
                     <a href="./musicPlayer/index.html">
@@ -73,7 +73,7 @@
         <div class="appDesc">
             <a class="appLaunch launchDark" href="./musicPlayer/index.html">
                 <span id="musicIcon" class="appIcon" loading="lazy"></span>
-                <p class="appName">Music player application</p>
+                <p class="appName">Music player</p>
             </a>
         </div>
     </section>
@@ -81,7 +81,7 @@
         <div class="appDesc">
             <a class="appLaunch launchLight" href="./password/index.html">
                 <span id="passwordIcon" class="appIcon" loading="lazy"></span>
-                <p class="appName">Password manager application</p>
+                <p class="appName">Password manager</p>
             </a>
         </div>
     </section>
@@ -89,7 +89,7 @@
         <div class="appDesc">
             <a class="appLaunch launchDark" href="./portfolio/index.html">
                 <span id="portfolioIcon" class="appIcon" loading="lazy"></span>
-                <p class="appName">Portfolio application</p>
+                <p class="appName">Portfolio</p>
             </a>
         </div>
     </section>
@@ -97,7 +97,7 @@
         <div class="appDesc">
             <a class="appLaunch launchLight" href="./quiz/index.html">
                 <span id="quizIcon" class="appIcon" loading="lazy"></span>
-                <p class="appName">Quiz application</p>
+                <p class="appName">Quiz</p>
             </a>
         </div>
     </section>
@@ -105,7 +105,7 @@
         <div class="appDesc">
             <a class="appLaunch launchDark" href="./survey/index.html">
                 <span id="surveyIcon" class="appIcon" loading="lazy"></span>
-                <p class="appName">Survey application</p>
+                <p class="appName">Survey</p>
             </a>
         </div>
     </section>
