--- a/project/password/index.html
+++ b/project/password/index.html
@@ -22,19 +22,19 @@
                     <li>Applications website</li>
                 </a>
                 <a href="../musicPlayer/">
-                    <li>Music application</li>
+                    <li>Music</li>
                 </a>
                 <a href="../password/">
-                    <li class="active">Password application</li>
+                    <li class="active">Password</li>
                 </a>
                 <a href="../portfolio/">
-                    <li>Portfolio application</li>
+                    <li>Portfolio</li>
                 </a>
                 <a href="../quiz/">
-                    <li>Quiz application</li>
+                    <li>Quiz</li>
                 </a>
                 <a href="../survey/">
-                    <li>Survey application</li>
+                    <li>Survey</li>
                 </a>
             </ul>
         </div>
