--- a/project/survey/index.html
+++ b/project/survey/index.html
@@ -20,19 +20,19 @@
                     <li>Applications website</li>
                 </a>
                 <a href="../musicPlayer/">
-                    <li>Music application</li>
+                    <li>Music</li>
                 </a>
                 <a href="../password/">
-                    <li>Password application</li>
+                    <li>Password</li>
                 </a>
                 <a href="../portfolio/">
-                    <li>Portfolio application</li>
+                    <li>Portfolio</li>
                 </a>
                 <a href="../quiz/">
-                    <li>Quiz application</li>
+                    <li>Quiz</li>
                 </a>
                 <a href="../survey/">
-                    <li class="active">Survey application</li>
+                    <li class="active">Survey</li>
                 </a>
             </ul>
         </div>
