corrected bug + app with nwjs

--- a/project/index.html
+++ b/project/index.html
@@ -47,7 +47,7 @@
         </div>
 
         <div class="welcome">
-            <p>Link tos description:</p>
+            <p>Link to description:</p>
             <div class="welcome_container">
                 <ul>
                     <a href="./musicPlayer/index.html">
