--- a/project/password/index.html
+++ b/project/password/index.html
@@ -18,22 +18,22 @@
     <div class="nav">
         <div class="container">
             <ul>
-                <a href="../">
+                <a href="../index.html">
                     <li>Applications website</li>
                 </a>
-                <a href="../musicPlayer/">
+                <a href="../musicPlayer/index.html">
                     <li>Music</li>
                 </a>
-                <a href="../password/">
+                <a href="../password/index.html">
                     <li class="active">Password</li>
                 </a>
-                <a href="../portfolio/">
+                <a href="../portfolio/index.html">
                     <li>Portfolio</li>
                 </a>
-                <a href="../quiz/">
+                <a href="../quiz/index.html">
                     <li>Quiz</li>
                 </a>
-                <a href="../survey/">
+                <a href="../survey/index.html">
                     <li>Survey</li>
                 </a>
             </ul>
